--- a/War3GameDllBaseAddress/MainWindow.xaml
+++ b/War3GameDllBaseAddress/MainWindow.xaml
@@ -5,24 +5,27 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:War3GameDllBaseAddress"
         mc:Ignorable="d"
-        Title="GameDll" Height="100" Width="525" ResizeMode="NoResize">
+        Title="GameDll" Height="130" Width="525" ResizeMode="NoResize">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="36"/>
             <ColumnDefinition Width="auto"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Label Content="汇编文本：" Grid.Column="0" Grid.Row="0" Margin="3" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
-        <TextBox Name="TextBox_Path" Grid.Column="1" Grid.Row="0" Margin="3" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
-        <Button Name="Button_Path" Grid.Column="2" Grid.Row="0" Content="路径" Margin="3" Click="Button_Path_Click"/>
+        <TextBox Name="TextBox_Path" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="0" Margin="3" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
+        <Button Name="Button_Path" Grid.Column="3" Grid.Row="0" Content="路径" Margin="3" Click="Button_Path_Click"/>
         <Label Content="输出文本：" Grid.Column="0" Grid.Row="1" Margin="3" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
-        <TextBox Name="TextBox_Output" Grid.Column="1" Grid.Row="1" Margin="3" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
-        <Button Name="Button_Output" Grid.Column="2" Grid.Row="1" Content="路径" Margin="3" Click="Button_Output_Click"/>
-        <Button Name="Button_Gen" Grid.Column="3" Grid.Row="0" Grid.RowSpan="2" Content="确定" Margin="3" Click="Button_Gen_Click"/>
+        <TextBox Name="TextBox_Output" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" Margin="3" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
+        <Button Name="Button_Output" Grid.Column="3" Grid.Row="1" Content="路径" Margin="3" Click="Button_Output_Click"/>
+        <Label Content="Dll名称：" Grid.Column="0" Grid.Row="2" Margin="3" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
+        <TextBox Name="TextBox_Name" Text="game" Grid.Column="1" Grid.Row="2" Margin="3" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
+        <Button Name="Button_Gen" Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="2" Grid.RowSpan="2" Content="确定" Margin="3" Click="Button_Gen_Click"/>
     </Grid>
 </Window>
