--- a/War3GameDllBaseAddress/MainWindow.xaml
+++ b/War3GameDllBaseAddress/MainWindow.xaml
@@ -10,7 +10,6 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="36"/>
             <ColumnDefinition Width="auto"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -20,12 +19,26 @@
         </Grid.RowDefinitions>
         <Label Content="汇编文本：" Grid.Column="0" Grid.Row="0" Margin="3" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
         <TextBox Name="TextBox_Path" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="0" Margin="3" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
-        <Button Name="Button_Path" Grid.Column="3" Grid.Row="0" Content="路径" Margin="3" Click="Button_Path_Click"/>
+        <Button Name="Button_Path" Grid.Column="2" Grid.Row="0" Content="路径" Margin="3" Click="Button_Path_Click"/>
         <Label Content="输出文本：" Grid.Column="0" Grid.Row="1" Margin="3" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
         <TextBox Name="TextBox_Output" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" Margin="3" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
-        <Button Name="Button_Output" Grid.Column="3" Grid.Row="1" Content="路径" Margin="3" Click="Button_Output_Click"/>
+        <Button Name="Button_Output" Grid.Column="2" Grid.Row="1" Content="路径" Margin="3" Click="Button_Output_Click"/>
         <Label Content="Dll名称：" Grid.Column="0" Grid.Row="2" Margin="3" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
-        <TextBox Name="TextBox_Name" Text="game" Grid.Column="1" Grid.Row="2" Margin="3" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
-        <Button Name="Button_Gen" Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="2" Grid.RowSpan="2" Content="确定" Margin="3" Click="Button_Gen_Click"/>
+        <Grid Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="100"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="60"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBox Name="TextBox_Name" Text="game" Grid.Column="0" Margin="3" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
+            <CheckBox Name="CheckBox_UseSepcialBaseAddress" Grid.Column="1" IsChecked="False" Margin="3" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <Label Content="基地址：" Grid.Column="2" Margin="3" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
+            <TextBox Name="TextBox_BaseAddress" Grid.Column="3" Margin="3" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" MaxLength="4" IsEnabled="{Binding ElementName=CheckBox_UseSepcialBaseAddress,Path=IsChecked}"/>
+            <CheckBox Name="CheckBox_DeleteNotDllText" Content="删除Dll无关行" Grid.Column="4" IsChecked="False" Margin="3" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <Button Name="Button_Gen" Grid.Column="5" Content="确定" Margin="3" Click="Button_Gen_Click"/>
+        </Grid>
     </Grid>
 </Window>
